--- a/templates/garage_cam_template.html
+++ b/templates/garage_cam_template.html
@@ -537,11 +537,10 @@
 
     <!-- Bottom Controls -->
     <div class="bottom-bar">
-        <a href="/" class="back-btn">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"/>
+        <a href="/" class="back-btn" title="Home">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
             </svg>
-            Back
         </a>
         <button class="control-btn" onclick="togglePlayPause()" id="play-pause-btn" title="Play/Pause">
             <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/></svg>
