--- a/templates/landing.html
+++ b/templates/landing.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>picamctl - Select Mode</title>
+    <link rel="icon" type="image/svg+xml" href="/static/favicon.svg">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
         * {
