--- a/templates/vlc_stream.html
+++ b/templates/vlc_stream.html
@@ -507,6 +507,13 @@
         
         // Update URL on page load
         updateStreamUrl();
+        
+        // Register service worker for PWA support
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/static/sw.js')
+                .then(reg => console.log('Service Worker registered:', reg))
+                .catch(err => console.log('Service Worker registration failed:', err));
+        }
     </script>
 </body>
 </html>
